tests/fixtures/errors/e0108_assign_input.mimz
// expect: E0108
module M {
  in x: bit
  x = 1
}
